update method
