# swagger.json
@@ -70,6 +70,9 @@
           "point": {
             "type": "number"
           },
+          "port": {
+            "type": "number"
+          },
           "resetPasswordToken": {
             "type": "string"
           },
@@ -364,7 +367,7 @@
         },
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Ok",
             "content": {
               "application/json": {
                 "schema": {
@@ -483,8 +486,8 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "OK",
+          "201": {
+            "description": "Created",
             "content": {
               "application/json": {
                 "schema": {
@@ -563,8 +566,8 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "OK",
+          "201": {
+            "description": "Created",
             "content": {
               "application/json": {
                 "schema": {
@@ -705,8 +708,8 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "OK",
+          "201": {
+            "description": "Created",
             "content": {
               "application/json": {
                 "schema": {
